OSC section now works

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     </div>
     <div class="osc">OSC
         <div class="osctype">
-            <li> <button onclick="toggleOSC(this)" class="oscbuttons" id="1" data-active="false">sine</button></li>
-            <li> <button onclick="toggleOSC(this)" class="oscbuttons" id="2" data-active="false">saw</button></li>
-            <li> <button onclick="toggleOSC(this)" class="oscbuttons" id="3" data-active="false">triangle</button></li>
-            <li> <button onclick="toggleOSC(this)" class="oscbuttons" id="4" data-active="false">square</button></li>
+            <li> <button class="oscbuttons" id="1" data-active="true" name="sine">sine</button></li>
+            <li> <button class="oscbuttons" id="2" data-active="false" name="saw">saw</button></li>
+            <li> <button class="oscbuttons" id="3" data-active="false" name="triangle">triangle</button></li>
+            <li> <button class="oscbuttons" id="4" data-active="false"name="square">square</button></li>
         </div>
     </div>
     <script src="main.js"></script>
