--- a/index.html
+++ b/index.html
@@ -26,19 +26,19 @@
         <div class="envelope-controls-container-container">
             <div class="envelope-controls-container">
                 <li class="envelope-controls">A</li>
-                <input type="range" min="0" max="3" value="1.5" id="envelope-slider" class="envelope" orient="vertical">
+                <input type="range" min="0" max="3" value="1.5" id="envelope-slider" class="envelope">
             </div>
             <div class="envelope-control-container">
                 <li class="envelope-controls">D</li>
-                <input type="range" min="0" max="3" value="1.5" id="envelope-slider" class="envelope" orient="vertical">
+                <input type="range" min="0" max="3" value="1.5" id="envelope-slider" class="envelope">
             </div>
             <div class="envelope-control-container">
                 <li class="envelope-controls">S</li>
-                <input type="range" min="0" max="3" value="1.5" id="envelope-slider" class="envelope" orient="vertical">
+                <input type="range" min="0" max="3" value="1.5" id="envelope-slider" class="envelope">
             </div>
             <div class="envelope-control-container">
                 <li class="envelope-controls">R</li>
-                <input type="range" min="0" max="3" value="1.5" id="envelope-slider" class="envelope" orient="vertical">
+                <input type="range" min="0" max="3" value="1.5" id="envelope-slider" class="envelope">
             </div>
         </div>
     </div>
