--- a/index.html
+++ b/index.html
@@ -26,22 +26,22 @@
         </div>
         <div class="envelope-container">
             <h2 class="envelope-header">ENVELOPE</h2>
-            <div class="envelope-controls-container-container">
+            <div class="envelope-controls-container-container" id="envelope-sliders">
                 <div class="envelope-controls-container">
                     <li class="envelope-controls">A</li>
-                    <input type="range" min="0" max="3" value="1.5" id="envelope-slider" class="envelope" orient="vertical">
+                    <input type="range" min="0" max="100" value="1.5" id="attack-slider" class="envelope" orient="vertical">
                 </div>
                 <div class="envelope-control-container">
                     <li class="envelope-controls">D</li>
-                    <input type="range" min="0" max="3" value="1.5" id="envelope-slider" class="envelope" orient="vertical">
+                    <input type="range" min="0" max="100" value="1.5" id="decay-slider" class="envelope" orient="vertical">
                 </div>
                 <div class="envelope-control-container">
                     <li class="envelope-controls">S</li>
-                    <input type="range" min="0" max="3" value="1.5" id="envelope-slider" class="envelope" orient="vertical">
+                    <input type="range" min="0" max="100" value="1.5" id="sustain-slider" class="envelope" orient="vertical">
                 </div>
                 <div class="envelope-control-container">
                     <li class="envelope-controls">R</li>
-                    <input type="range" min="0" max="3" value="1.5" id="envelope-slider" class="envelope" orient="vertical">
+                    <input type="range" min="0" max="100" value="1.5" id="release-slider" class="envelope" orient="vertical">
                 </div>
             </div>
         </div>
