--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
         <h1 class="volume-header">VOLUME</h1>
         <input type="range" min="-100" max="4" value="" id="volume-slider" class="volume">
     </div>
+    <div>
+        <canvas class="oscilloscope"></canvas>
+    </div>
     <div class="controls">
         <div class="osc-container">
             <h3 class="osc-header">OSC</h3>
