Oscilloscope now fucking work, god bless nexusUI

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <input type="range" min="-100" max="4" value="" id="volume-slider" class="volume">
     </div>
     <div class="oscilloscope-container">
+        <div class="oscilloscope"></div>
     </div>
     <div class="controls">
         <div class="osc-container">
