--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 <link rel="stylesheet" href="./styles.css">
 
 <head>
@@ -11,6 +11,9 @@
 </head>
 
 <body>
+    <div class="dark-mode-toggle">
+        <input type="checkbox" id="switch" name="theme"/><label for="switch">Toggle</label>
+    </div>
     <div class="controls">
         <div class="osc-container">
             <h3 class="patch-header">OSC</h3>
@@ -70,7 +73,6 @@
         <div id="keyboard">
         </div>    
     </div>
-
     <script src="main.js"></script>
 </body>
 </html>
