--- a/index.html
+++ b/index.html
@@ -29,19 +29,19 @@
             <div class="envelope-controls-container-container" id="envelope-sliders">
                 <div class="envelope-controls-container">
                     <li class="envelope-controls">A</li>
-                    <input type="range" min="0" max="100" value="1.5" id="attack-slider" class="envelope" orient="vertical">
+                    <div class="a"></div>
                 </div>
                 <div class="envelope-control-container">
                     <li class="envelope-controls">D</li>
-                    <input type="range" min="0" max="100" value="1.5" id="decay-slider" class="envelope" orient="vertical">
+                    <div class="d"></div>
                 </div>
                 <div class="envelope-control-container">
                     <li class="envelope-controls">S</li>
-                    <input type="range" min="0" max="100" value="1.5" id="sustain-slider" class="envelope" orient="vertical">
+                    <div class="s"></div>
                 </div>
                 <div class="envelope-control-container">
                     <li class="envelope-controls">R</li>
-                    <input type="range" min="0" max="100" value="1.5" id="release-slider" class="envelope" orient="vertical">
+                    <div class="r"></div>
                 </div>
             </div>
         </div>
