added slider colorizations, dark mode header

--- a/index.html
+++ b/index.html
@@ -11,9 +11,13 @@
 </head>
 
 <body>
-    <div class="dark-mode-toggle">
-        <input type="checkbox" id="switch" name="theme"/><label for="switch">Toggle</label>
+    <div class="dark-mode-container">
+        <h6 class="dark-mode-header">Turn off the lights 💡</h6>
+        <div class="dark-mode-toggle">
+            <input type="checkbox" id="switch" name="theme"/><label for="switch"></label>
+        </div>
     </div>
+
     <div class="controls">
         <div class="osc-container">
             <h3 class="patch-header">OSC</h3>
